ingress/nginx-ingress.yaml
kind: Namespace
metadata:
  name: ingress-nginx
